<resources>
    <string name="app_name">WeekTwoDayThreeHomework</string>
    <string name="resource">I enjoy listening to music</string>
    <string name="resource1">Translation is difficult due to semantics</string>
    <string name="resource2">The Governor of Georgia is Brian Kemp</string>
    <string name="resource3">I hope to own a business one day</string>
    <string name="resource4">I used Google to translate my English</string>
</resources>
