<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textColor="#444444"
        android:text= "@string/resource"
         />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textColor="#444444"
        android:text= "@string/resource1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textColor="#444444"
        android:text= "@string/resource2"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textColor="#444444"
        android:text= "@string/resource3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="36dp"
        android:textColor="#444444"
        android:text= "@string/resource4"
        />

</LinearLayout>